introduce BookingStrategy